test/fail/invalid_name.rlang
/* invalid name: bool */
int bool := 0;
